--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Your New Jekyll Site
+name: Amit Gupta
 description: Blogging about stuffs
 meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
