--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ highlighter: pygments
 
 paginate: 20
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
-google_analytics: 'UA-XXXXXXXX-X'
-disqus_shortname: 'your-disqus-shortname'
+domain_name: 'http://www.amitgupta.me'
+google_analytics: 'UA-47739506-1'
+disqus_shortname: 'amitgupta5'
 
 # Details for the RSS feed generator
-url:            'http://your-blog-url.example.com'
-author:         'Your Name'
-authorTwitter:  'YourTwitterUsername'
+url:            'http://www.amitgupta.me'
+author:         'Amit Gupta'
+authorTwitter:  'thedaydreamer9'
 
 permalink:       /:year/:title/
 
