--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Amit Gupta
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+description: Experimenting with truth
+meta_description: "Experimenting with truth"
 
 aboutPage: true
 
